--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .glass-card {
+    @apply backdrop-blur backdrop-saturate-100 border-solid border border-fadedborder bg-card shadow-card;
+  }
+}
